# arc-theme-tomorrow

./: configure.ac
common/cinnamon/3.6/sass/: _colors.scss
common/gnome-shell/3.34/sass/: _colors.scss
common/gnome-shell/3.36/sass/: _colors.scss
common/gtk-2.0/: xfce-notify.rc
common/gtk-2.0/dark/: gtkrc
common/gtk-2.0/darker/: gtkrc
common/gtk-2.0/light/: gtkrc
common/gtk-2.0/lighter/: gtkrc
common/gtk-3.0/3.18/sass/: _colors.scss
common/gtk-3.0/3.20/sass/: _colors.scss
common/gtk-3.0/3.24/sass/: _colors.scss
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-3.xml
common/openbox/Arc-Dark/openbox-3/: themerc
common/openbox/Arc-Darker/openbox-3/: themerc
common/openbox/Arc/openbox-3/: themerc
